# gophrland

./: .SRCINFO  .bazelproject  .bazelrc  .gitignore  BUILD.bazel  PKGBUILD  README.md  WORKSPACE  config.yaml  default.nix  flake.nix  go.mod  go.sum  gomod2nix.toml  main.go  package.nix  repositories.bzl  shell.nix
cmd/: main.go
cmd/client/: main.go
cmd/client/cmd/: root.go
cmd/client/pkg/plugins/bring_float/: get_app.go
cmd/client/pkg/plugins/expose/: get_app.go
cmd/client/pkg/plugins/scratchpads/: get_app.go
cmd/gophrland/: BUILD.bazel  main.go
cmd/gophrland/cmd/: BUILD.bazel  root.go  version.go
cmd/gophrland/cmd/server/: BUILD.bazel  daemon.go
cmd/internal/client/: main.go
cmd/internal/server/: main.go
cmd/server/: main.go
cmd/server/cmd/IPC/: connect.go  hyprctl.go  types.go
cmd/server/cmd/config/: apply_config.go  read_config.go
cmd/server/cmd/plugins/bring_float/: bring_current.go  client_is_lost.go  get_lost_clients_for_workspace.go
cmd/server/cmd/plugins/expose/: call_command.go  load_plugin.go  root.go  toggle.go
cmd/server/cmd/plugins/scratchpads/: call_command.go  load_plugin.go  toggle.go
cmd/server/cmd/plugins/scratchpads/cmd/: animations.go
cmd/server/internal/: close_connection.go  create_server.go  process_client.go
pkg/client/cmd/: main.go
pkg/client/pkg/: BUILD.bazel  version.go
pkg/client/pkg/plugins/bring_float/cmd/: get_app.go
pkg/client/pkg/plugins/scratchpads/cmd/: get_app.go
pkg/client/pkg/tools/: start-connection.go
pkg/logging/: BUILD.bazel  logging.go
pkg/server/cmd/: BUILD.bazel  main.go
pkg/server/internal/: BUILD.bazel  call_command.go  close_server.go  create_server.go  process_client.go
pkg/server/pkg/: BUILD.bazel  version.go
pkg/server/pkg/IPC/: connect.go  hyprctl.go  types.go
pkg/server/pkg/config/: BUILD.bazel  apply_config.go  read_config.go
pkg/server/pkg/plugins/bring_float/: bring_current.go  call_command.go  client_is_lost.go  get_lost_clients_for_workspace.go  load_plugin.go
pkg/server/pkg/plugins/expose/: call_command.go  load_plugin.go  root.go  toggle.go
pkg/server/pkg/plugins/scratchpads/: load_plugin.go  toggle.go
pkg/server/pkg/plugins/scratchpads/cmd/: animations.go
plugins/: BUILD.bazel  apply_config.go  main.go
plugins/expose/client/cmd/: BUILD.bazel  expose.go  get_app.go
plugins/expose/server/cmd/: BUILD.bazel  call_command.go  load_plugin.go  root.go  toggle.go
plugins/float/client/cmd/: BUILD.bazel  float.go  get_app.go
plugins/float/server/cmd/: BUILD.bazel  bring_current.go  call_command.go  client_is_lost.go  get_lost_clients_for_workspace.go  load_plugin.go
plugins/monitors/client/: BUILD.bazel  get_app.go  monitors.go
plugins/monitors/server/cmd/: BUILD.bazel  call_command.go  focus.go  load_plugin.go  move.go
plugins/parallax/client/cmd/: parallax.go
plugins/parallax/server/cmd/: load_plugin.go
plugins/scratchpads/client/cmd/: BUILD.bazel  get_app.go  scratchpads.go
plugins/scratchpads/server/cmd/: BUILD.bazel  call_command.go  load_event_callbacks.go  load_plugin.go  toggle.go
plugins/scratchpads/server/pkg/: BUILD.bazel  animations.go  resize.go
