load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "plugins",
    srcs = [
        "main.go",
        "apply_config.go",
    ],
    importpath = "github.com/edjubert/gophrland/plugins",
    visibility = ["//visibility:public"],
    deps = [
      "//plugins/float/client/cmd",
      "//plugins/expose/client/cmd",
      "//plugins/scratchpads/client/cmd",
      "//plugins/monitors/client",
      "//plugins/float/server/cmd",
      "//plugins/expose/server/cmd",
      "//plugins/scratchpads/server/cmd",
      "//plugins/monitors/server/cmd",
      "@com_github_spf13_cobra//:cobra"
    ]
)

