load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gophrland_lib",
    srcs = [ "main.go" ],
    importpath = "github.com/edjubert/gophrland/cmd/gophrland",
    visibility = [ "//visibility:private" ],
    deps = [
        "//cmd/gophrland/cmd",
        "//pkg/logging",
    ],
)

go_binary(
    name = "gophrland",
    embed = [":gophrland_lib"],
    visibility = ["//visibility:public"],
)