load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "root.go",
        "version.go",
    ],
    importpath = "github.com/edjubert/gophrland/cmd/gophrland/cmd",
    visibility = ["//visibility:public"],
    deps = [
      "//cmd/gophrland/cmd/server",
      "//plugins",
      "//pkg/client/pkg",
      "//pkg/server/pkg",
      "@com_github_spf13_cobra//:cobra",
      "@com_github_spf13_viper//:viper",
    ],
)

