load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "main.go",
    ],
    importpath = "github.com/edjubert/gophrland/pkg/server/cmd",
    visibility = ["//visibility:public"],
    deps = [
      "//pkg/logging",
      "//pkg/server/internal",
      "//pkg/server/pkg/config",
      "//plugins",
      "@com_github_edjubert_hyprland_ipc_go//ipc"
    ],
)

