load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client",
    srcs = [
        "get_app.go",
        "monitors.go",
    ],
    importpath = "github.com/edjubert/gophrland/plugins/monitors/client",
    visibility = ["//visibility:public"],
    deps = [
      "//plugins/monitors/server/cmd",
      "@com_github_spf13_cobra//:cobra",
      "@com_github_edjubert_hyprland_ipc_go//ipc",
    ]
)
