load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server",
    srcs = [
        "daemon.go",
    ],
    importpath = "github.com/edjubert/gophrland/cmd/gophrland/cmd/server",
    visibility = ["//visibility:public"],
    deps = [
      "//pkg/logging",
      "//pkg/server/cmd",
      "@org_golang_x_sync//errgroup",
      "@com_github_spf13_cobra//:cobra",
      "@com_github_spf13_viper//:viper",
   ],
)


