load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "config",
    srcs = [
        "read_config.go",
    ],
    importpath = "github.com/edjubert/gophrland/pkg/server/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
      "//plugins",
      "@com_github_edjubert_hyprland_ipc_go//hyprctl",
      "@in_gopkg_yaml_v3//:yaml_v3"
    ]
)

