load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "call_command.go",
        "client_is_lost.go",
        "get_lost_clients_for_workspace.go",
        "load_plugin.go",
        "bring_current.go",
    ],
    importpath = "github.com/edjubert/gophrland/plugins/float/server/cmd",
    visibility = ["//visibility:public"],
    deps = [
      "@com_github_edjubert_hyprland_ipc_go//hyprctl",
      "@com_github_edjubert_hyprland_ipc_go//types",
    ]
)
