load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "call_command.go",
        "focus.go",
        "load_plugin.go",
        "move.go",
    ],
    importpath = "github.com/edjubert/gophrland/plugins/monitors/server/cmd",
    visibility = ["//visibility:public"],
    deps = [
      "@com_github_edjubert_hyprland_ipc_go//ipc",
      "@com_github_edjubert_hyprland_ipc_go//hyprctl",
      "@com_github_edjubert_hyprland_ipc_go//types",
    ]
)
