load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "get_app.go",
        "scratchpads.go",
    ],
    importpath = "github.com/edjubert/gophrland/plugins/scratchpads/client/cmd",
    visibility = ["//visibility:public"],
    deps = [
      "@com_github_spf13_cobra//:cobra",
      "@com_github_edjubert_hyprland_ipc_go//ipc",
      "@com_github_edjubert_hyprland_ipc_go//types",
      "@com_github_edjubert_hyprland_ipc_go//hyprctl",
    ]
)
