load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "call_command.go",
        "load_event_callbacks.go",
        "load_plugin.go",
        "toggle.go",
    ],
    importpath = "github.com/edjubert/gophrland/plugins/scratchpads/server/cmd",
    visibility = ["//visibility:public"],
    deps = [
      "//plugins/scratchpads/server/pkg",
      "@com_github_edjubert_hyprland_ipc_go//ipc",
      "@com_github_edjubert_hyprland_ipc_go//types",
      "@com_github_edjubert_hyprland_ipc_go//hyprctl",
    ]
)
