load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "pkg",
    srcs = [
        "animations.go",
        "resize.go",
    ],
    importpath = "github.com/edjubert/gophrland/plugins/scratchpads/server/pkg",
    visibility = ["//visibility:public"],
    deps = [
      "@com_github_edjubert_hyprland_ipc_go//hyprctl",
      "@com_github_edjubert_hyprland_ipc_go//types",
    ]
)
